<resources>
    <string name="app_name">Fanintek Mobile</string>
    <string name="login">Login</string>
    <string name="login_description">Silahkan login menggunakan akun yang terdaftar</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="doesnt_have_account">Belum punya akun? Register disini</string>
    <string name="register">Register</string>
    <string name="register_description">Silahkan melengkapi data-data berikut untuk melanjutkan proses registrasi.</string>
    <string name="i_have_account">Sudah memiliki akun? Login disini</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="forgot_password_description">Silahkan mengisi alamat email yang terdaftar untuk mendapatkan link reset password</string>
    <string name="back_to_login">Kembali ke login</string>
    <string name="forgot_password_question">Lupa Password?</string>
    <string name="logout">Logout</string>
    <string name="hi">Hi,</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="logout_confirmation">Apakah anda yakin ingin logout?</string>
    <string name="no_user_found">Belum Ada User</string>
    <string name="request_failed">Request Gagal</string>
    <string name="email_required">Email Harus Diisi</string>
    <string name="email_not_valid">Email Tidak Valid</string>
    <string name="password_required">Password Harus Diisi</string>
    <string name="email_unverified">Email Belum Terverifikasi</string>
    <string name="name_required">Nama Harus Diisi</string>
    <string name="name_minimum">Nama Harus Minimal 3 Huruf</string>
    <string name="name_maximum">Nama Harus Maksimal 50 Huruf</string>
    <string name="password_minimum">Password Harus Minimal 8 Karakter</string>
    <string name="password_validation">Password Harus Mengandung angka, huruf besar dan kecil</string>
    <string name="password_not_same">Konfirmasi Password Tidak Sama</string>
    <string name="check_your_mail">Silahkan Cek Email Anda</string>
    <string name="login_failed">Username atau password salah</string>
</resources>