<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <ScrollView
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/fifteen"
        android:paddingHorizontal="@dimen/fifteen">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleText"
        android:text="@string/forgot_password"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/ten"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/edtEmail"
            style="@style/BorderedInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnForgotPassword"
        style="@style/PrimaryButton"
        android:layout_marginTop="@dimen/fifteen"
        android:layout_width="match_parent"
        android:text="@string/forgot_password"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/back_to_login"/>

    </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/loading"
        android:visibility="gone"
        layout="@layout/include_loading"/>

</FrameLayout>